--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -32,3 +32,37 @@ margin-left: 1150px;
 .text:hover{
     text-shadow: 0px 0px 16px whitesmoke; 
 }
+
+@media only screen and (max-width: 1500px){
+    .about{
+        margin-left: 625px;
+    }
+    .contact{
+        margin-left: 410px;
+    }
+   
+}
+
+@media only screen and (max-width: 1300px){
+    .about{
+        margin-left: 450px;
+    }
+    .contact{
+        margin-left: 100px;
+    }
+    .portfolio{
+        margin-left: 370px;
+    }
+}
+
+@media only screen and (max-width: 1100px){
+    .about{
+        margin-left: 300px;
+    }
+    .contact{
+        margin-left: 50px;
+    }
+    .portfolio{
+        margin-left: 50px;
+    }
+}
