--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -38,3 +38,28 @@ margin-top: 200px;
 .paragraph{
   margin: 20px;
 }
+@media only screen and (max-width: 1250px){
+  .aboutcard{
+      margin-left: 25%;
+  }
+ 
+}
+@media only screen and (max-width: 1100px){
+  .aboutcard{
+      margin-left: 20%;
+  }
+ 
+}
+@media only screen and (max-width: 950px){
+  .aboutcard{
+      margin-left: 15%;
+  }
+ 
+}
+
+@media only screen and (max-width: 800px){
+  .aboutcard{
+      margin-left: 7.5%;
+  }
+ 
+}
