--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -69,7 +69,7 @@ margin-left: 1150px;
 
 @media only screen and (max-width: 1024px){
     .about{
-        margin-left: 200px;
+        margin-left: 260px;
         font-size: 15px;
     }
     .contact{
@@ -99,7 +99,7 @@ margin-left: 1150px;
 
 @media only screen and (max-width: 414px){
     .about{
-        margin-left: 180px;
+        margin-left: 230px;
         font-size: 15px;
     }
     .contact{
@@ -114,7 +114,7 @@ margin-left: 1150px;
 
 @media only screen and (max-width: 414px){
     .about{
-        margin-left: 180px;
+        margin-left: 260px;
         font-size: 15px;
     }
     .contact{
@@ -129,7 +129,7 @@ margin-left: 1150px;
 
 @media only screen and (max-width: 375px){
     .about{
-        margin-left: 160px;
+        margin-left: 230px;
         font-size: 14px;
     }
     .contact{
@@ -145,18 +145,40 @@ margin-left: 1150px;
     }
 }
 
+@media only screen and (max-width: 360px){
+    .about{
+        margin-left: 230px;
+        font-size: 13px;
+
+    }
+
+    .contact{
+        margin-left: 10px;
+        font-size: 13px;
+
+    }
+
+    .portfolio{
+        margin-left: 10px;
+        font-size: 13px;
+        
+    }
+
+
+}
+
 @media only screen and (max-width: 320px){
     .about{
-        margin-left: 140px;
-        font-size: 12px;
+        margin-left: 190px;
+        font-size: 13px;
     }
     .contact{
         margin-left: 10px;
-        font-size: 12px;
+        font-size: 13px;
     }
     .portfolio{
         margin-left: 10px;
-        font-size: 12px;
+        font-size: 13px;
     }
 
 
