--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -53,9 +53,17 @@ margin-top: 200px;
 @media only screen and (max-width: 1024px){
   .aboutcard{
     margin-left: 0%;
+    width: 500px;
 }
 .imagesize{
   margin-top: 50px;
+  
+}
+.abouttext{
+  font-size: 12px;
+  margin-top: 150px;
+  width: 300px;
+  margin-left: 100px;
 }
 }
 
@@ -64,7 +72,7 @@ margin-top: 200px;
     margin-top: 50px;
   }
   .aboutcard{
-    margin-left: 6%;
+    margin-left: 4%;
     width: 300px;
     margin-top: 0px;
 
@@ -76,6 +84,7 @@ margin-top: 200px;
 .abouttext{
   font-size: 12px;
   margin-top: 150px;
+  margin-left: 0px;
 }
  
 }
