contact page fully mobily responsive

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -17,6 +17,7 @@
 
 .form-control{
     box-shadow: 0px 0px 48px whitesmoke;
+    /* width:100px; */
 }
 
 .submitbtn{
@@ -47,16 +48,125 @@
     }
    
 }
-@media only screen and (max-width: 950px){
+@media only screen and (max-width: 1024px){
     .contactcard{
-        margin-left: 15%;
+        margin-left: 3.25%;
+        
     }
-   
+    .form{
+        margin-top: 0px;
+    }
+    .form-control{
+        width: 350px;
+        font-size: 12px;
+    }
+    .message{
+        height: 100px;
+    }
+    .submitbtn{
+        margin-left: 20px;
+        background-color: black;
+    }
+    #resetbtn{
+        margin-left: 40px;
+    }
+    .formlabel{
+        font-size: 12px;
+    }
+
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 414px){
     .contactcard{
-        margin-left: 7.5%;
+        margin-left: 3.25%;
+        
     }
-   
+    .form{
+        margin-top: 0px;
+    }
+    .form-control{
+        width: 300px;
+        font-size: 12px;
+    }
+    .message{
+        height: 100px;
+    }
+    .submitbtn{
+        margin-left: 0px;
+        background-color: black;
+    }
+    #resetbtn{
+        margin-left: 40px;
+    }
+    .formlabel{
+        font-size: 12px;
+    }
+
+}
+
+@media only screen and (max-width: 414px){
+    .contactcard{
+        margin-left: 3.25%;
+        
+    }
+    .form{
+        margin-top: 0px;
+    }
+    .form-control{
+        width: 300px;
+        font-size: 12px;
+    }
+    .message{
+        height: 100px;
+    }
+    .submitbtn{
+        margin-left: 0px;
+        background-color: black;
+        
+    }
+    #resetbtn{
+        margin-left: 40px;
+    }
+    .formlabel{
+        font-size: 12px;
+    }
+
+}
+
+@media only screen and (max-width: 375px){
+    
+    .submitbtn{
+    width: 140px;
+    height: 70px;
+    margin-left: 6px;
+    }
+    .contactcard{
+        margin-left: 2%;
+        
+    }
+}
+
+@media only screen and (max-width: 360px){
+    .contactcard{
+        margin-left: 1.8%;
+        
+    }
+
+}
+
+@media only screen and (max-width: 320px){
+    .contactcard{
+        margin-left: 1.8%;
+        
+    }
+
+    .submitbtn{
+        width: 120px;
+        height: 60px;
+        margin-left: 6px;
+        }
+
+    .form-control{
+        width: 250px;
+    }
 }
