--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .Navbar{
     width: 1728px;
     height: 100px;
-    font-family: "Cinzel";
+    font-family: "Bangers";
     font-size: 20px;
     text-decoration: none !important;
 }
