tinkering with actual mobile view

--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -367,6 +367,7 @@ margin-top: -300px;
     }
     .employeeDirectoryLink{
         font-size: 13px; 
+        margin-left: 50px;
     }
     .InnerJoinLink{
         font-size: 13px;
