--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -8,14 +8,16 @@
    background-color:  rgba(255, 0, 0, 0);
 }
 .image{
-background-image: url("./IMG_0796.JPG");
+background-image: url("ProfilePic.jpg");
 box-shadow: 0px 0px whitesmoke;
 border-radius: 25px;
-height: 150px;
-width: 40%;
-margin-left: 150px;
+height: 410px;
+width: 440px;
+margin-left: 35px;
 margin-bottom: -100px;
 box-shadow: 0px 0px 48px whitesmoke;
+transform: scale(.5,.5);
+
 } 
 
 .imagesize{
@@ -23,7 +25,7 @@ margin-top: 200px;
 
 }
 .abouttext{
-    margin-top: 200px;
+    margin-top: 100px;
     margin-left: 20px;
     color:rgb(197, 197, 197);
     background-color:  rgba(255, 0, 0, 0); 
@@ -61,16 +63,13 @@ margin-top: 200px;
 }
 .abouttext{
   font-size: 12px;
-  margin-top: 150px;
   width: 300px;
   margin-left: 100px;
 }
 }
 
 @media only screen and (max-width: 768px){
-  .imagesize{
-    margin-top: 50px;
-  }
+
   .aboutcard{
     margin-left: 4%;
     width: 300px;
@@ -78,13 +77,12 @@ margin-top: 200px;
 
 }
 .image{
-  margin-left: 60px;
-  width: 60%;
+  margin-left: -65px;
 }
 .abouttext{
   font-size: 12px;
-  margin-top: 150px;
   margin-left: 0px;
+  margin-top: 50px;
 }
  
 }
@@ -96,13 +94,16 @@ margin-top: 200px;
     margin-top: 0px;
 
 }
+.imagesize{
+  margin-top: -75px;
+  
+  }
 .image{
-  margin-left: 60px;
-  width: 60%;
+  margin-left: -70px;
 }
+
 .abouttext{
   font-size: 14px;
-  margin-top: 150px;
 }
 }
 @media only screen and (max-width: 411px){
@@ -112,13 +113,9 @@ margin-top: 200px;
     margin-top: 0px;
 
 }
-.image{
- 
-  width: 60%;
-}
+
 .abouttext{
   font-size: 14px;
-  margin-top: 150px;
 }
 }
 @media only screen and (max-width: 375px){
@@ -128,13 +125,9 @@ margin-top: 200px;
     margin-top: 0px;
 
 }
-.image{
-  
-  width: 60%;
-}
+
 .abouttext{
   font-size: 14px;
-  margin-top: 150px;
 }
 }
 @media only screen and (max-width: 360px){
@@ -144,13 +137,9 @@ margin-top: 200px;
     margin-top: 0px;
 
 }
-.image{
-  
-  width: 60%;
-}
+
 .abouttext{
   font-size: 12px;
-  margin-top: 150px;
 }
 }
 
@@ -161,12 +150,8 @@ margin-top: 200px;
     margin-top: 0px;
 
 }
-.image{
-  margin-left: 60px;
-  width: 60%;
-}
+
 .abouttext{
   font-size: 12px;
-  margin-top: 150px;
 }
 }
