--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -50,21 +50,22 @@ margin-left:29.5%;
 }
 
 .employeeDirectory{
-background-image: url("portfoliogifs/employeeDirectory.gif");
-height: 300px;
-width: 40%;
+background-image: url("portfoliogifs/GenSpliceGif.gif");
+height: 250px;
+width: 38%;
 zoom: 0.4;
 -moz-transform: scale(0.4);
 box-shadow: 0px 0px 48px whitesmoke;
 border-radius: 25px;
-margin-left: 625px;
-margin-top: 30px;
+margin-left: 630px;
+margin-top: 55px;
 margin-bottom: 50px;
+transform: scaleY(1.2);
 }
 .employeeDirectoryLink{
-    margin-left: 282px;
+    margin-left: 315px;
     color: whitesmoke;
-    
+  
 }
 .employeeTracker{
 background-image: url("portfoliogifs/employeeTracker.gif");
@@ -80,12 +81,12 @@ margin-left: 300px;
 
 
 .InnerJoin{
-    background-image: url("portfoliogifs/Inner-Join-Pic.png");
+    background-image: url("portfoliogifs/employeeDirectory.gif");
     margin-top:30px;
     margin-left: 300px;
 }
 .InnerJoinLink{
- margin-left: 180px;
+ margin-left: 144px;
  color: whitesmoke;
  display: inline;
 }
